--- a/testes.css
+++ b/testes.css
@@ -1,14 +1,9 @@
 h1{
+    font-style: oblique;
     text-align:center;
     color:blue
 };
 
-.table-responsive{
-    width: 100% !important;
-  }
-
-  .table {
-      border: 3px solid black;
-      width: 15% !important;
-      margin: auto;
-  }
+.form-control{
+    margin: auto;
+}
